Ekonomi List ve Post methodu eklendi

--- a/GazeteMvc/PresentationsLayer/Areas/GazetePanel/Views/Shared/_Layout.cshtml
+++ b/GazeteMvc/PresentationsLayer/Areas/GazetePanel/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                     <li><a href="#" class="active">Ana Sayfa</a></li>
                     <li><a href="#">Gündem</a></li>
                     <li><a href="#">Spor</a></li>
-                    <li><a href="#">Ekonomi</a></li>
+                    <li><a href="/admin/Ekonomi/List">Ekonomi</a></li>
                     <li><a href="#">Teknoloji</a></li>
                 </ul>
                 <div class="mobile-menu-btn">
