Ekonomi Controller oluşturuldu

--- a/GazeteMvc/PresentationsLayer/Areas/GazetePanel/Views/Home/List.cshtml
+++ b/GazeteMvc/PresentationsLayer/Areas/GazetePanel/Views/Home/List.cshtml
@@ -10,7 +10,13 @@
     <link href="~/admin/css/stylesheet.css" rel="stylesheet" />
 </head>
 <body>
-  
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-3">
+            <a href="/admin/Ekonomi/Add" class="btn btn-warning">Yeni Ekonomi Haber</a>
+        </div>
+
+    </div
     <div class="slider-container">
         <div class="slider">
             <div class="slide">
